--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.5",
+    "toast": "^0.5.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
